--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    outline: none;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    color: #1b1b17;
+}
+
 body {
     background: linear-gradient(to right, #ffcdb9, #FFC0CB);
+    min-height: 100vh;
+    padding-bottom: 4rem;
 }
 
 li {
