--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,6 +50,7 @@ import {Card, Typo} from '@koibumi-design/solidjs'
 <style>
     main {
         max-width: 70rem;
+        width: 100%;
         margin: 3rem auto;
         padding: 0 1rem;
     }
