--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const today = new Date();
             variant={GLOBAL_STYLE}
             id="footer-container"
     >
-        &copy; {today.getFullYear()} {COPYRIGHT_NAME}. All rights reserved.
+        &copy; {today.getFullYear()}&nbsp;{COPYRIGHT_NAME}. All rights reserved.
     </Card>
 </footer>
 
