--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import {GLOBAL_STYLE, SITE_TITLE} from '../consts';
 			<div class="internal-links">
 				<HeaderLink href="/">Home</HeaderLink>
 				<HeaderLink href="/blog">Blog</HeaderLink>
-				<HeaderLink href="/about">About</HeaderLink>
+				<HeaderLink href="https://github.com/koibumi-design/astro-blog">GitHub</HeaderLink>
 			</div>
 		</nav>
 	</header>
