--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,9 +6,11 @@ import {SITE_TITLE, SITE_DESCRIPTION} from '../../consts';
 import {getCollection} from 'astro:content';
 import PostCard from "../../components/PostCard.astro";
 
-const posts = (await getCollection('blog')).sort(
-    (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-);
+const posts = (await getCollection('blog'))
+    .filter(post => !post.data.notCompleted)
+    .sort(
+        (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+    );
 ---
 
 <!doctype html>
