--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.scss';
+import {FAVICON_SRC} from "../consts";
 
 interface Props {
 	title: string;
@@ -17,7 +18,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href={FAVICON_SRC} />
 <meta name="generator" content={Astro.generator} />
 
 
