--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import {getCollection} from 'astro:content';
-import {SITE_TITLE, SITE_DESCRIPTION, GLOBAL_STYLE, BIO} from '../consts';
+import {SITE_TITLE, SITE_DESCRIPTION, GLOBAL_STYLE, BIO, AVATAR_SRC} from '../consts';
 import GitHubIcon from "../components/icons/GitHubIcon.astro";
 import {Card, Typo} from '@koibumi-design/solidjs'
 import PostCard from "../components/PostCard.astro";
@@ -23,7 +23,7 @@ const posts = (await getCollection('blog'))
 <Header/>
 <main>
     <Card variant={GLOBAL_STYLE} id="avatar-bio">
-        <img src="/avatar.avif" alt="avatar"/>
+        <img src={AVATAR_SRC} alt="avatar"/>
         <section id="bio">
             <Typo emphasis={true} variant="h2">
                 {SITE_TITLE}
