--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -100,6 +100,10 @@ article {
     span:empty {
       height: 0;
     }
+
+    code span {
+      font-family: 'Fira Code', monospace;
+    }
   }
 
   code:not(:has( > span)) {
@@ -168,5 +172,3 @@ article {
     }
   }
 }
-
-
