bugfix: flex-warp doesn't work

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -4,7 +4,7 @@ import {Button} from '@koibumi-design/solidjs';
 
 type Props = HTMLAttributes<'a'>;
 
-const {href, class: className, ...props} = Astro.props;
+const {href, class: className} = Astro.props;
 
 const {pathname} = Astro.url;
 const subpath = pathname.match(/[^\/]+/g);
@@ -16,6 +16,7 @@ const isActive = href === pathname || href === '/' + subpath?.[0];
         as="link"
         href={href?.toString()}
         target='_self'
+        class={className ?? ''}
 >
     <slot/>
 </Button>
