bugfix: className doesn't work

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,7 @@ import {GLOBAL_STYLE, SITE_TITLE} from '../consts';
         display: flex;
         align-items: center;
         justify-content: space-between;
-        max-width: 90rem;
+        max-width: min(90rem, 100%);
         margin: 0 auto;
         flex-wrap: wrap;
         gap: 1rem;
