use flex-warp for links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,7 @@ import {GLOBAL_STYLE, SITE_TITLE} from '../consts';
         display: flex;
         align-items: center;
         justify-content: space-between;
-        max-width: min(90rem, 100%);
+        max-width: 90rem;
         margin: 0 auto;
         flex-wrap: wrap;
         gap: 1rem;
@@ -52,5 +52,6 @@ import {GLOBAL_STYLE, SITE_TITLE} from '../consts';
         display: flex;
         align-items: center;
         gap: .5rem;
+		flex-wrap: wrap;
     }
 </style>
