--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,22 +1,26 @@
 ---
 import type {HTMLAttributes} from 'astro/types';
-import {Button} from '@koibumi-design/solidjs';
+import '@/styles/button.scss'
+import {clsx} from "clsx";
 
 type Props = HTMLAttributes<'a'>;
 
-const {href, class: className} = Astro.props;
+const {href, class: className, ...props} = Astro.props;
 
 const {pathname} = Astro.url;
 const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === '/' + subpath?.[0];
 ---
 
-<Button
-        variant={isActive ? 'solid' : 'light'}
-        as="link"
-        href={href?.toString()}
-        target='_self'
-        class={className ?? ''}
+<a
+    href={href?.toString()}
+    target='_self'
+    class={clsx(
+        className,
+        'md link-button',
+        isActive ? 'button-solid-primary' : 'button-light-primary'
+    )}
+    {...props}
 >
-    <slot/>
-</Button>
+  <slot/>
+</a>
