--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,39 +3,50 @@ import HeaderLink from './HeaderLink.astro';
 import Card from './Card.astro';
 import {GLOBAL_STYLE, SITE_TITLE} from '../consts';
 import "@/styles/components.scss";
+import {clsx} from "clsx";
 ---
 
-<Card class="head-container" variant={GLOBAL_STYLE}>
-	<header>
-		<nav>
-			<h1>
-				<a href="/" id="title" class="link">
-					{SITE_TITLE}
-				</a>
-			</h1>
-			<div class="internal-links">
-				<HeaderLink href="/">Home</HeaderLink>
-				<HeaderLink href="/blog">Blog</HeaderLink>
-				<HeaderLink href="https://github.com/koibumi-design/astro-blog">GitHub</HeaderLink>
-			</div>
-		</nav>
-	</header>
-</Card>
+<header
+    class={clsx(
+        "head-container",
+        'card',
+        GLOBAL_STYLE === 'glass' && 'glass',
+        GLOBAL_STYLE === 'lightGlass' && 'light-glass',
+    )}
+>
+  <nav>
+    <h1>
+      <a href="/" id="title" class="link">
+        {SITE_TITLE}
+      </a>
+    </h1>
+    <div class="internal-links">
+      <HeaderLink href="/">Home</HeaderLink>
+      <HeaderLink href="/blog">Blog</HeaderLink>
+      <HeaderLink href="https://github.com/koibumi-design/astro-blog">GitHub</HeaderLink>
+    </div>
+  </nav>
+</header>
 
 
 <style>
-	.head-container {
-		border-top-right-radius: 0;
-		border-top-left-radius: 0;
-	}
+    .head-container {
+        border-radius: 0 0 0.75rem 0.75rem;
 
-	#title {
-		text-decoration: none;
-	}
+        padding: 0.75rem;
+    }
 
-	#title:hover {
-		text-decoration: underline;
-	}
+    h1 > #title {
+        font-size: 2rem;
+    }
+
+    #title {
+        text-decoration: none;
+    }
+
+    #title:hover {
+        text-decoration: underline;
+    }
 
     nav {
         padding: 0 0.5rem;
@@ -53,6 +64,6 @@ import "@/styles/components.scss";
         display: flex;
         align-items: center;
         gap: .5rem;
-		flex-wrap: wrap;
+        flex-wrap: wrap;
     }
 </style>
