--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,10 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import {SITE_TITLE, SITE_DESCRIPTION} from '../../consts';
+import BaseHead from '@/components/BaseHead.astro';
+import Header from '@/components/Header.astro';
+import Footer from '@/components/Footer.astro';
+import {SITE_TITLE, SITE_DESCRIPTION} from '@/consts';
 import {getCollection} from 'astro:content';
-import PostCard from "../../components/PostCard.astro";
+import PostCard from "@/components/PostCard.astro";
 
 const posts = (await getCollection('blog'))
     .filter(post => !post.data.notCompleted)
