--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,6 +10,8 @@ interface Props {
 	image?: string;
 }
 
+const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+
 const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 ---
 
@@ -18,6 +20,10 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href={FAVICON_SRC} />
 <meta name="generator" content={Astro.generator} />
+
+
+<!-- Canonical URL -->
+<link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
