--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import "colors";
+@use "colors";
 
 * {
   padding: 0;
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-image: url('/background.webp') , linear-gradient(to right, #ffcdb9, #FFC0CB) ;
+  background-image: url('/bg.avif') , linear-gradient(to right, #ffcdb9, #FFC0CB) ;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -40,7 +40,7 @@ p {
   }
 
   &.emphasize {
-    color: $color-primary-500;
+    color: colors.$color-primary-500;
   }
 }
 
